# lime

./: .cspell.json  .envrc  .ruff.toml  404.html  CHANGELOG.md  Justfile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  pyrightconfig.json  sitemap.xml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.config/mise/: config.toml
.config/release-please/: .manifest.json
.github/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.share.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.github/release-please/: .manifest.json
.github/workflows/: mega-linter.yaml  release.yaml  shared-docs.yaml
SUMMARY/: index.html
api/SUMMARY/: index.html
api/liblaf/lime/: index.html
api/liblaf/lime/cli/: index.html
api/liblaf/lime/llm/: index.html
api/liblaf/lime/prompts/: index.html
api/liblaf/lime/tools/: index.html
api/liblaf/lime/utils/: index.html
docs/: README.md  help.md
docs/css/: fonts.css
docs/meta-prompts/: commit.md  topics.md
docs/scripts/: gen-schema.py
megalinter-reports/: .cspell.json  IDE-config.txt  kics-results.sarif  mega-linter-report.json  megalinter-report.md  megalinter-report.sarif
megalinter-reports/sarif/: PYTHON_RUFF.sarif  REPOSITORY_DEVSKIM.sarif  REPOSITORY_KICS.sarif  REPOSITORY_SYFT.sarif  REPOSITORY_SYFT.sarif.syft.json  REPOSITORY_TRIVY_SBOM.sarif  REPOSITORY_TRIVY_SBOM.sarif.trivy-sbom.json
megalinter-reports/updated_sources/megalinter-reports/: kics-results.sarif  megalinter-report.md
megalinter-reports/updated_sources/megalinter-reports/sarif/: REPOSITORY_DEVSKIM.sarif  REPOSITORY_KICS.sarif  REPOSITORY_TRIVY_SBOM.sarif  REPOSITORY_TRIVY_SBOM.sarif.trivy-sbom.json
meta-prompts/commit/: index.html
reference/liblaf/lime/: index.html
reference/liblaf/lime/cli/: index.html
reference/liblaf/lime/cli/invoke/: index.html
reference/liblaf/lime/cli/parse/: index.html
reference/liblaf/lime/llm/: index.html
reference/liblaf/lime/tools/: index.html
reference/liblaf/lime/tools/constants/: index.html
reference/liblaf/lime/typed/: index.html
reference/liblaf/lime/typing/: index.html
schemas/: config.json
scripts/: gen-schema.py  github-description.py  prompt-generator.ipynb  prompt-generator.py
search/: search_index.json
src/liblaf/lime/: __init__.pyi
src/liblaf/lime/action/: _live.py
src/liblaf/lime/assets/prompts/: commit.md  description.md  topics.md
src/liblaf/lime/cli/: __init__.pyi  _app.py  _commit.py  _generate.py
src/liblaf/lime/cli/commit/: _main.py
src/liblaf/lime/cli/invoke/: __init__.pyi  _lime.py
src/liblaf/lime/cli/parse/: __init__.pyi  _lime.py
src/liblaf/lime/cli/repo/: __init__.pyi  _app.py
src/liblaf/lime/config/: _config.py
src/liblaf/lime/llm/: _llm.py
src/liblaf/lime/plugin/: __init__.pyi  _github_topics.py  _repomix.py
src/liblaf/lime/prompts/: commit.md  description.md  features.md
src/liblaf/lime/tools/: __init__.pyi  _git.py
src/liblaf/lime/utils/: __init__.pyi  _app_dir.py  _get_content.py  _logging.py  _prompt.py  _run.py
tests/llm/: test_llm.py
(+10 files in other folders)
